tests/standalone-tests/failing/non-coercible-numbers.lua
local num = 12 + "wstfgl"